tests/positive/if.rkl
(if
  0 (print 1)
  0 (print 2)
  0 (print 3)
  )
