tests/negative/unterminated_block_comment.rkl
(print "$0" 1) /* this comment never closes
